# chatsune-voice

./: .dockerignore  .env.example  .gitignore  ARCH-LINUX.md  Dockerfile.cuda  Dockerfile.rocm  README.md  compose.yml
.github/workflows/: ci.yml  docker.yml
backend/: pyproject.toml
backend/scripts/: prefetch_models.py
backend/static/: app.js  index.html  style.css
backend/tests/: conftest.py  test_api_models.py  test_audio.py  test_chatterbox_tts.py  test_config.py  test_health_api.py  test_integration_smoke.py  test_logging_setup.py  test_main_startup.py  test_protocol.py  test_qwen_tts.py  test_registry.py  test_stt_api.py  test_tts_api.py  test_tts_clone_api.py  test_whisper.py
backend/voice/: __init__.py  audio.py  config.py  logging_setup.py  main.py
backend/voice/api/: __init__.py  app.py  health.py  models.py  stt.py  tts.py  tts_clone.py
backend/voice/engines/: __init__.py  _chatterbox_onnx_reference.py  chatterbox_tts.py  protocol.py  qwen_tts.py  registry.py  whisper.py
docs/superpowers/plans/: 2026-04-18-chatsune-voice-phase-1.md  2026-04-19-chatterbox-integration.md  2026-04-19-chatterbox-onnx-inference.md
docs/superpowers/specs/: 2026-04-18-chatsune-voice-phase-1-design.md  2026-04-19-chatterbox-integration-design.md  2026-04-19-chatterbox-onnx-inference-design.md
