[project]
name = "chatsune-voice"
version = "0.1.0"
description = "Voice homelab backend for chatsune (Whisper Turbo STT + Qwen3-TTS)"
authors = [{ name = "Chris (symphonic-navigator)" }]
license = { text = "GPL-3.0-or-later" }
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "structlog>=24.4,<25",
    "faster-whisper>=1.0,<2",
    "qwen-tts>=0.1",
    "numpy>=1.26,<3",
    "soundfile>=0.12,<0.13",
    "python-multipart>=0.0.12,<0.1",
    "torch>=2.5,<3",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<0.25",
    "httpx>=0.27,<0.28",
    "ruff>=0.7,<0.8",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["voice"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
